--- a/style.css
+++ b/style.css
@@ -35,12 +35,17 @@ header nav li{
   box-shadow: 0px 0px 1px 2px black;
 }
 
+#heading{
+  width: 55%;
+  margin: 0 auto;
+}
+
 #logoLeft {
   display: block;
   position: absolute;
   left: 20px;
   top: 35px;
-  width: 250px;
+  width: 20%;
   height: auto;
 }
 
@@ -49,7 +54,7 @@ header nav li{
   position: absolute;
   right: 20px;
   top: 35px;
-  width: 250px;
+  width: 20%;
   height: auto;
   transform: rotateY(180deg);
 }
