--- a/salesStyle.css
+++ b/salesStyle.css
@@ -56,7 +56,7 @@ body div ul li{
   border: 1px solid #A74826;
   padding-left: 2px;
 }
-li:hover{
+body div ul li:hover{
   background-color: #a74826;
   color: white;
 }
