--- a/style.css
+++ b/style.css
@@ -2,14 +2,11 @@
 *{
   margin: 0;
   padding: 0;
-  /*outline: 1px dashed red;*/
 }
-
 body{
   background-color: #E0C778;
 }
-
-/* Header Up Top */
+/********************** Header Up Top *****************/
 header {
   position: fixed;
   top: 0;
@@ -19,16 +16,13 @@ header {
   text-align: center;
   background-color: #777445;
   border-bottom: 3px solid black;
-  /*padding-top: 30px;*/
 }
-
 header h1{
   font-size: 4em;
   text-shadow: 0px 0px 6px rgba(255,255,255,0.7);
   padding-bottom: 10px;
   white-space: nowrap;
 }
-
 header nav{
   font-size: 1.5em;
   text-align: center;
@@ -42,12 +36,10 @@ header nav li{
   padding: 10px;
   box-shadow: 0px 0px 1px 2px black;
 }
-
 #heading{
   width: 55%;
   margin: 0 auto;
 }
-
 #logoLeft {
   display: block;
   position: absolute;
@@ -56,7 +48,6 @@ header nav li{
   width: 20%;
   height: auto;
 }
-
 #logoRight {
   display: block;
   position: absolute;
@@ -66,7 +57,7 @@ header nav li{
   height: auto;
   transform: rotateY(180deg);
 }
-/* Main Content Stuff */
+/********************** Main Content Stuff**************/
 #content{
   position: static;
   margin-top: 175px;
@@ -88,7 +79,7 @@ section{
   margin: 1% auto;
   padding: 15px;
 }
-
+/*****************Body Content CSS****************/
 body section p{
   padding: 5px;
   text-indent: 10px;
@@ -99,28 +90,19 @@ body section p::first-letter{
 section h1{
   text-align: center;
 }
-
 body section img{
   box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
 }
-
 #afterIntro{
   position: relative;
   z-index: -1;
 }
-
-#decorate{
-  position: absolute;
-  left: 6%;
-  width: 40%;
-}
-
+/*****************Merchandise CSS****************/
 #merchandise{
   position: absolute;
   right: 6%;
   width: 40%;
 }
-
 .merch{
   margin: 4% auto 2% auto;
   text-align: center;
@@ -131,7 +113,10 @@ body section img{
   width: 50%;
   border-radius: 5%;
 }
-
+#chinook{
+  border-radius: 50%;
+}
+/*****************Decoration CSS****************/
 .dec{
   margin: 4% auto 2% auto;
   font-size: 2em;
@@ -141,13 +126,13 @@ body section img{
   width: 50%;
   border-radius: 5%;
 }
-
+#decorate{
+  position: absolute;
+  left: 6%;
+  width: 40%;
+}
 #family {
   border-radius: 50%;
   width: 500px;
   height: auto;
-}
-
-#chinook{
-  border-radius: 50%;
 }
